Fix javadoc plugin setup