@@ -138,12 +138,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.0.0-M1</version>
+					<version>3.0.1</version>
 					<configuration>
-						<additionalJOptions>
-							<additionalJOption>--add-modules</additionalJOption>
-							<additionalJOption>jdk.incubator.httpclient</additionalJOption>
-						</additionalJOptions>
+						<doclint>none</doclint>
 					</configuration>
 				</plugin>
 				<!-- Use 'mvn license:format' at top of project to add missing headers -->
